--- a/Exerciese/Week1/Lesson1/Exercise1/index.html
+++ b/Exerciese/Week1/Lesson1/Exercise1/index.html
@@ -12,23 +12,6 @@
 		lorem viverra imperdiet ut ut massa .Fusce vel rhoncus ricus.Curabitur et lutus purus. Nullamsit amet dictum sapien.Duis sit amet nibh sit amet purus sollicitudin ullamcorper ac vitae velit.Nam
 		mollis tortor et massa elementum gravida.Cras quí maris nec nisi pharetra eleifend id ultrices diam.</p>
 		<h2>About This Site</h2>
-		<p>Welcome to  my in-class home page!As in the case ưith many webpase,mine is still under construcion!</p>
-	</body>
-</html>
-
-
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title>Ex2</title>
-	</head>
-	<body>
-		<h1>STUDENT</h1>
-		<p>Welcome to my in-class home page!As is the case with many web pages,mine is still under construction!</p>
-		<p>I created this page in <a href="http://continuingstudies.stanford.edu/"><ins>Continuing Studies</ins></a> class at <a href="http://www.stanford.edu/"><ins>Stanford University</ins></a> 
-		<p>The web site for ,my class is <a href="http//www.stanford.edu/group/csp/cs21/">http//www.stanford.edu/group/csp/cs21/.</a></p>
-		<p><i>Last Updated:TODAY'S DATE</i></p>
-		<p><i>Copyright 2011,<ins>STUDENT</ins><i/></p>
+		<p>Welcome to  my in-class home page!As in the case with many webpase,mine is still under construcion!</p>
 	</body>
 </html>
