--- a/Exerciese/Week1/Lesson1/Exercise3/index.html
+++ b/Exerciese/Week1/Lesson1/Exercise3/index.html
@@ -4,12 +4,14 @@
 		<meta charset="utf-8">
 		<title>Ex3</title>
 		<style>
-			.n{background-color:green;
+			.container{background-color:green;
 			position:relative;
+			. h1{color:red;
+			
 			</style>		
 	</head>
 	<body>
-		<div class="n">
+		<div class="container">
 		<h1 style="color:red">STUDENT</h1>
 		<h2 style="color:while"> About Me</h2>
 		<p>Lorem ipsum sit amem,consectetur adipicing elit.Integer vehicula tineidunt eget variuss. Sed consectetur dolor ligula.Nullam tincidunt rutrum consectetur.Aênan elementum arcu et
@@ -22,5 +24,7 @@
 		<p>The web site for ,my class is <a href="http//www.stanford.edu/group/csp/cs21/">http//www.stanford.edu/group/csp/cs21/.</a></p>
 		<h6><i>Last Updated:TODAY'S DATE</i></h6>
 		<h6><i>Copyright 2014,<ins>STUDENT</ins><i/></h6> 
+		</div>
+		</body>
 </html>
 © 2020 GitHub, Inc.
