--- a/Exerciese/Week1/Lesson1/Exercise5/index.html
+++ b/Exerciese/Week1/Lesson1/Exercise5/index.html
@@ -4,26 +4,36 @@
 		<meta charset="utf-8">
 		<title>Ex5</title>
 		<style>
-			.n{background-color:green;
+			.container{background-color:green;
 			position:relative;
+}
+			.color{background-color:yellow; text-align:center;
+}
+			img{width:40px; height:60px
+}
 		</style>		
 	</head>
 	<body>
-		<div class="n">
-		<ul>
-		<li>About</li>
-		<li>About This Site</li>
-		<li>Footer Stub</li>
-		<h1 style="color:red">STUDENT</h1>
-		<h2 style="color:white"> About Me</h2>
-		<p>Lorem ipsum sit amem,consectetur adipicing elit.Integer vehicula tineidunt eget variuss. Sed consectetur dolor ligula.Nullam tincidunt rutrum consectetur.Aênan elementum arcu et
-		lorem viverra imperdiet ut ut massa .Fusce vel rhoncus ricus.Curabitur et lutus purus. Nullamsit amet dictum sapien.Duis sit amet nibh sit amet purus sollicitudin ullamcorper ac vitae velit.Nam
-		mollis tortor et massa elementum gravida.Cras quí maris nec nisi pharetra eleifend id ultrices diam.</p>
+		<div class="container">
+			<ul>
+			  <li>About Me</li>
+			  <li>About This Site</li>
+			  <li>Footer stuff</li>
+			</ul>
+			<h1 style="color:red">STUDENT</h1>
+			<h2 style="color: white;">About Me</h2>
+			<p>
+			  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vehicula tincidunt nunc eget varius. Sed
+			  consectetur dolor ligula. Nullam tincidunt rutrum consectetur. Aenean elementum arcu et lorem viverra imperdiet ut
+			  ut massa. Fusce vel rhoncus risus. Curabitur et luctus purus. Nullam sit amet dictum sapien. Duis sit amet nibh
+			  sit amet purus sollicitudin ullamcorper ac vitae velit. Nam mollis tortor et massa elementum gravida. Cras quis
+			  mauris nec nisi pharetra eleifend id ultrices diam.
+			</p>
 		<h2 style="color:white">About This Site</h2>
 		<p>Welcome to my in-class home page!As is the case with many web pages,mine is still under construction!</p>
-		<p>I created this page in a <img src="http://web.stanford.edu/group/csp/cs21/images/cs.gif" alt="stanford" style="width:156px;heigh:153px;"><a href="http://continuingstudies.stanford.edu/"><ins>Continuing Studies</ins></a> class at <a href="http://www.stanford.edu/"><ins>Stanford University</ins></a> 
+		<p>I created this page in a <img src="http://web.stanford.edu/group/csp/cs21/images/cs.gif" /><a href="http://continuingstudies.stanford.edu/"><ins>Continuing Studies</ins></a> class at <a href="http://www.stanford.edu/"><ins>Stanford University</ins></a> 
 		<p>The web site for ,my class is <a href="http//www.stanford.edu/group/csp/cs21/">http//www.stanford.edu/group/csp/cs21/.</a></p>
-		<div style="background-color= yellow; text-align: center;">
+		<div class="color">
 		<img src="http://magoosh.com/gre/files/2013/07/stanford_logo.png" /> 
 		</div>
 		<ol>
