--- a/Exerciese/Week1/Lesson1/Exercise6/index.html
+++ b/Exerciese/Week1/Lesson1/Exercise6/index.html
@@ -11,15 +11,17 @@
 	</head>
 	<body>
 		<div class="ridge">
-		<h1><b>HTML Basics</b></h1>
-		<h2><b>Intro</b></h2>
-		<p><b>HyperText Markup Language</b>, commonly abbreviated as <b>HTML</b>,is 
-		the standard markup language used to create web pages.</p>
-		<p>Along with CCS,and <a href="https://www.javascript.com/"><ins>JavaCript</ins></a>,HTML is a <i>cornerstone technology </i>used to create web pages, as to create user interfaces for mobie and web application.</p>
-		<h2><b>Versionen</b></h2>
-		<p style="text-align:center;">HTML</p>
-		<P style="text-align:center;">XHTML</p>
-		<p style="text-align:center;">HTML5</p>
-		<img src="https://tse1.mm.bing.net/th?id=OIP.rzjkmRkZ1l72kHvcZ4pUVwHaEK&pid=Api&P=0&w=304&h=172" alt="anhdep" width=250px;height=300px;>
+			<h1><b>HTML Basics</b></h1>
+			<h2><b>Intro</b></h2>
+			<p><b>HyperText Markup Language</b>, commonly abbreviated as <b>HTML</b>,is 
+			the standard markup language used to create web pages.</p>
+			<p>Along with CCS,and <a href="https://www.javascript.com/"><ins>JavaCript</ins></a>,HTML is a <i>cornerstone technology </i>used to create web pages, as to create user interfaces for mobie and web application.</p>
+			<h2><b>Versionen</b></h2>
+			<center>
+				<br> HTML</br>
+				<br>XHTML</br>
+				<br>HTML5</br>
+			<center>
+			<img src="https://tse1.mm.bing.net/th?id=OIP.rzjkmRkZ1l72kHvcZ4pUVwHaEK&pid=Api&P=0&w=304&h=172" alt="anhdep" width=250px;height=300px;>
 	</body>
 </html>
