--- a/Exerciese/Week1/Lesson1/Exercise7/index.html
+++ b/Exerciese/Week1/Lesson1/Exercise7/index.html
@@ -5,11 +5,11 @@
 		<meta charset="utf-8">
 		<title>Ex7</title>
 		<style>
-		.n {border-style: ridge;}
+		.container {border-style: ridge;}
 		</style>
 	</head>
 	<body>
-		<div class="n">
+		<div class="container">
 			<h2><b>HTML List: Ordered,Unordered & Definition List</b></h2>
 		<hr>
 		<p>Following is the list of proposed student activities like:</p>
