--- a/Exerciese/Week1/Lesson3/Exercise1/index.html
+++ b/Exerciese/Week1/Lesson3/Exercise1/index.html
@@ -39,7 +39,7 @@
 			<label for="bankinh">Bán kính vận chuyển</label>
 			<input type="range" id="bankinh" name="bankinh" min="10" max="20">
 			</br>
-			 <button>Đăng ký</button>
+			 <button type="sumit">Đăng ký</button>
 			</form>
 		</body
 </html>
