--- a/Exerciese/Week1/Lesson4/Exercise1/index.html
+++ b/Exerciese/Week1/Lesson4/Exercise1/index.html
@@ -12,14 +12,14 @@
 			header{
 				text-align:center;
 }
-			.nav{
+			nav{
 			background-color: pink;
 			width:75%;
 			border:1px solid black;
 			padding: 15px;
 			text-align: center;
 }
-			color{
+			.color{
 			background-color: yellow;
 			padding: 5px;
 			border:1px solid;
@@ -31,13 +31,15 @@
 	</head>
 	<body	>
 		<header>
-			<div class="nav">
+		<center>
+			<nav>
 			<ul>
 				<div class="color"><a href="">Aboutme</a></div>
 				<div class="color"><a href="">About This Site</a></div>
 				<div class="color"><a href="">Footer Stuff</a></div>
 			</ul>
-			</div>
+			</nav>
+			</center>
 		</header>
 			<div>
 			<h1 style="color: red; font: Arial">STUDENT</h1>
