--- a/Exerciese/Week1/Lesson1/Exercise2/index.html
+++ b/Exerciese/Week1/Lesson1/Exercise2/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Ex2</title>
-		<style>boder{
+		<style>
+		.boder{
 				border: 1px solid black;
 				border-collapse: collapse;
 }
