--- a/Exerciese/Week1/Lesson2/Exercise3/index.html
+++ b/Exerciese/Week1/Lesson2/Exercise3/index.html
@@ -24,7 +24,7 @@
 	<option value="ca mau">Ca mau</option>
 	</select>
 	</br>
-	Arrival date*:
+	Arrival date ont
 	<br>
 	<input id="date" name="fullname"  type="date" placeholder="m/d/y">
 	</br>
