--- a/Exerciese/Week2/Lesson5/Exercise1/index.html
+++ b/Exerciese/Week2/Lesson5/Exercise1/index.html
@@ -5,17 +5,18 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Lora&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div class="header">
 		<nav>
 			<ul>
-			<a class="left" href="#">CS 193x</a>
-			<a href="#">HOME</a>
-			<a href="#">ABOUT</a>
-			<a href="#">NEWS</a>
-			<a href="#">READ ME</a>
-			<a class="active" href="#">TEXT ACTIONS</a>
+				<a class="left" href="#">CS 193x</a>
+				<a href="#">HOME</a>
+				<a href="#">ABOUT</a>
+				<a href="#">NEWS</a>
+				<a href="#">READ ME</a>
+				<a class="active" href="#">TEXT ACTIONS</a>
 			</ul>
 		</nav>
 		<p><i>Sustainability</i></p>
@@ -24,7 +25,7 @@
 	</div>
 	<div class="body">
 		<h2>We conserve land though outreach, restration, and research.</h2>
-		<p class="textbox">Some of the Earth's greatest landscapes are threatened by increased road construction, oil and gas exploration, and mining. We aim to protect these areas from inaooropriate development, but we cannot achieve our goals alone. Find out how you can help.</p>
+		<p class="content">Some of the Earth's greatest landscapes are threatened by increased road construction, oil and gas exploration, and mining. We aim to protect these areas from inaooropriate development, but we cannot achieve our goals alone. Find out how you can help.</p>
 		<table>
 			<tr>
 				<td>
