--- a/Exerciese/Week1/Lesson2/Exercise2/index.html
+++ b/Exerciese/Week1/Lesson2/Exercise2/index.html
@@ -5,46 +5,48 @@
 		<title>Ex2</title>
 	</head>
 	<body>
-		<h2 style="color:purple">A Simple From</h2>
-		<h3 style="color:#FF4E5D">From fundamental</h3>
-		<fieldset>
-		<legend> Customer Info</legend>
-		<p>
-		<label for="fullname">Name:</label>
-		<input id="fullname" name="fullname" alt="123" type="text" placeholder="Enter your name">
-		</p>
-		<p>
-		<label for="number">Telephone:</label>
-		<input id="number" name="numer" type=number  placeholder="Patten: 1-234-567-8910">
-		</p>
-		<p>
-		<label for="fullname">E-mail address:</label>
-		<input id="fullname" name="name" type=text placeholder="Enter your name">
-		<br>
-		<p>Gender:
-		<label for="male">Male</label>
-		<input type="radio" name="gender" id="male" value="gender">
-		<label for="Grender">Female</label>
-		 <input type="radio" name="gender" id="female" value="gender">
-		 </p>
-		<p>Hobbies:
-		<label for="Basketball">Basketball</label>
-		<input type="checkbox" name="Hobbies" id="Basketball" value="Hobbies">
-		<label for="Basketball">Football</label>
-		<input type="checkbox" name="Hobbies" id="Foodball" value="Hobbies">
-		<label for="Basketball">Badminton</label>
-		<input type="checkbox" name="Hobbies" id="Badminton" value="Hobbies">
-		</br>
-		<br>
-		</fieldset>
-		<fieldset>
-		<legend>Books</legend>
-		 <label for="fullname">Name:</label>
-		 		<input id="fullname" name="fullname" alt="123" type="text" placeholder="">
-				Quantity(Maximum 5):
-		 		<input id="Quantity" name="soluong" type="number" min="1" max="5">
-		</fieldset>
-			<button>Submit</button>
-			<button>Reset</button>
+		<form>
+				<h2 style="color:purple">A Simple From</h2>
+				<h3 style="color:#FF4E5D">From fundamental</h3>
+				<fieldset>
+				<legend> Customer Info</legend>
+				<p>
+				<label for="fullname">Name:</label>
+				<input id="fullname" name="fullname" alt="123" type="text" placeholder="Enter your name">
+				</p>
+				<p>
+				<label for="number">Telephone:</label>
+				<input id="number" name="numer" type=number  placeholder="Patten: 1-234-567-8910">
+				</p>
+				<p>
+				<label for="fullname">E-mail address:</label>
+				<input id="fullname" name="name" type=text placeholder="Enter your name">
+				<br>
+				<p>Gender:
+				<label for="male">Male</label>
+				<input type="radio" name="gender" id="male" value="gender">
+				<label for="Grender">Female</label>
+				 <input type="radio" name="gender" id="female" value="gender">
+				 </p>
+				<p>Hobbies:
+				<label for="Basketball">Basketball</label>
+				<input type="checkbox" name="Hobbies" id="Basketball" value="Hobbies">
+				<label for="Basketball">Football</label>
+				<input type="checkbox" name="Hobbies" id="Foodball" value="Hobbies">
+				<label for="Basketball">Badminton</label>
+				<input type="checkbox" name="Hobbies" id="Badminton" value="Hobbies">
+				</br>
+				<br>
+				</fieldset>
+				<fieldset>
+				<legend>Books</legend>
+				 <label for="fullname">Name:</label>
+						<input id="fullname" name="fullname" alt="123" type="text" placeholder="">
+						Quantity(Maximum 5):
+						<input id="Quantity" name="soluong" type="number" min="1" max="5">
+				</fieldset>
+					<button type"submit">Submit</button>
+					<button>Reset</button>
+		</form>
 		</body>
 </html>		
